--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>QuizMaster</title>
+    <meta name="description" content="Create quiz for free using JSON data with QuizMaster.">
+    <title>QuizMaster - Free Quiz Creation with JSON</title>
+
+    <meta name="title" content="QuizMaster - Free Quiz Creation with JSON">
+    <meta name="keywords" content="quiz, quizmaster, free, creation, JSON, JavaScript Object Notation, quizzes">
+    <meta name="author" content="Abhay Gajipara">
+    <meta name="robots" content="index, follow">
   </head>
   <body>
     <div id="root"></div>
